# Snake_LanGame

./: CMakeLists.txt  LICENSE  README.md  main.cpp
client/: client.cpp  food.cpp  food.h  game.cpp  game.h  server.cpp  server.h  snake.cpp  snake.h  snake_part.cpp  snake_part.h
server/: game.cpp  game.h  server.cpp  server.h  server_main.cpp  snake.cpp  snake.h  snake_part.cpp  snake_part.h
